chore: devenv swagger regen script
